tests/dataset/tpc-ds/compiler/pl/q24.error
run: exit status 2
[]
ERROR: /tmp/q24.pl:60: user:main Unknown message: error('expect failed')
